2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist) <gnu>:
	Use shy regexp.  Fix incorrect backref to potentially unmatched group.

	* dirtrack.el (dirtrack-default-directory-function): Remove.
	(dirtrack-directory-function): Use file-name-as-directory.
	(dirtrack-windows-directory-function): Simplify.
	(dirtrack-forward-slash, dirtrack-backward-slash)
	(dirtrack-replace-slash): Remove.
	(dirtrack-toggle): Adjust comint-preoutput-filter-functions as well.
	(dirtrack): Fix wrong parenthesizing; use match-string.

	* progmodes/octave-inf.el: Remove spurious * in docstrings.
	(inferior-octave-mode): Only change the buffer-local value of
	comint-dynamic-complete-functions.
	(inferior-octave-mode-map, inferior-octave-mode-syntax-table):
	Move the initialization to the declaration.
	(inferior-octave-complete): Remove unused var `filter'.

	* shell.el (shell-mode): Only change the buffer-local value of
	comint-dynamic-complete-functions.

2006-07-07  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-agenda-get-todos): Skip subtree also if
	entry is skipped because it has been scheduled.
	(org-prepare-agenda-buffers): Don't mark buffers as modified when
	changing `:org-archived' and `:org-comment' properties.

2006-07-06  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-select-display): Don't make the temp frame
	minibuffer-only, in case it's not a temp frame.
	(server-process-filter): Don't delete the temp frame if it's the
	only one we have on that display.

	* files.el (find-alternate-file): Doc fix.

2006-07-05  Richard Stallman  <rms@gnu.org>

	* files.el (abbreviate-file-name): Add save-match-data.

2006-07-03  Richard Stallman  <rms@gnu.org>

	* faces.el (read-face-name): Doc fix.

2006-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* net/goto-addr.el (goto-address): Mark as safe for local evals.

2006-07-05  Andre Spiegel  <spiegel@gnu.org>
